Fix invalid suggestion window position on ChromeOS and Windwos.

This is regression from
http://crrev.com/e0fd1100eb3638bccf27afb8b288a5dcada2a1fb [formerly dac0c7af14c29c9d8509b775d5044e5448b6263b]
The show_ime_if_needed is one shot message so we can't use it as a
trigger of monitoring composition bounding box, since we need
to keep monitoring during the text input session is active.

BUG=640012

Review-Url: https://codereview.chromium.org/2330423002
Cr-Commit-Position: refs/heads/master@{#418491}

Former-commit-id: 14f15f11744445a7adb34030719afeb41a9432d0