content/browser/renderer_host/render_widget_host_view_aura.cc
@@ -2967,9 +2967,11 @@ void RenderWidgetHostViewAura::OnUpdateTextInputStateCalled(
     GetInputMethod()->OnTextInputTypeChanged(this);
 
   const TextInputState* state = text_input_manager_->GetTextInputState();
-  if (state && state->show_ime_if_needed &&
-      state->type != ui::TEXT_INPUT_TYPE_NONE) {
+  if (state && state->show_ime_if_needed)
     GetInputMethod()->ShowImeIfNeeded();
+
+
+  if (state && state->type != ui::TEXT_INPUT_TYPE_NONE) {
     // Start monitoring the composition information if the focused node is
     // editable.
     RenderWidgetHostImpl* last_active_widget =
